k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gowebapp
spec:
  ingressClassName: nginx
  rules:
    - host: "gowebapp.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gowebapp
                port:
                  number: 80
